Conversion of code used for graphical display.